src/objects/BillRatePeriod__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Bill Rate Periods</relationshipLabel>
        <relationshipName>BillRatePeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillRateEnd__c</fullName>
        <label>BillRateEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillRateStart__c</fullName>
        <label>BillRateStart</label>
        <type>Date</type>
    </fields>
    <label>Bill Rate Period</label>
    <nameField>
        <displayFormat>BRP-{0000}</displayFormat>
        <label>BillRatePeriod Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Rate Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>